src/test/ui/issue-13483.stderr
error: missing condition for `if` statemement
  --> $DIR/issue-13483.rs:13:14
   |
13 |     } else if { //ERROR: MISSING CONDITIONAL
   |              ^ expected if condition here

error: aborting due to previous error

